第一次更新项目

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -70,7 +70,7 @@
                 <a href="#"class="ui qq circular icon button"data-content="1652213184"data-position="bottom center"><i class="qq icon"></i></a>
             </div>
             <div class="ui wechat-qr flowing popup transition hidden">
-                <img src="../static/images/weixing.jpg" alt="" class="ui rounded image" style="width:110px">
+                <img src="./images/weixing.jpg" alt="" class="ui rounded image" style="width:110px">
             </div>
       </div>
   </div>
